--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width,inital-scale=1.0">
+		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<title>The Event</title>
 		<link rel="stylesheet" href="./css/style.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -50,7 +50,7 @@
 					  </ul>
 					  </div>
 					  <form class="d-flex">
-						<button class="btn  bg-danger text-white rounded-pill" type="submit">Buy Tickets</button>
+						<button class="btn bg-danger text-white rounded-pill" type="submit">Buy Tickets</button>
 					  </form>
 					
 				  </div>
@@ -66,11 +66,11 @@
 					<div class="col-sm-12 text-center text-white home-col d-flex gap-3 flex-column align-items-center justify-content-center ">
 						<h1 class="home-title">THE ANNUAL<br>
 							<span class="text-danger">MARKETING</span> CONFERENCE</h1>
-						<p class="fs-3">10-12 December, Downtown Conference Center, New York</p>
+						<p class="adjust">10-12 December, Downtown Conference Center, New York</p>
 						<div class="row play-icon">
 							<i class="bi bi-play-fill text-white fs-3"></i>
 						</div>
-						<button class="btn border-danger text-white rounded-pill" type="submit">About The Event</button>
+						<button class="btn home-btn border-danger text-white rounded-pill" type="submit">About The Event</button>
 					</div>
 				</div>
 			</div>
