--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<div class="row play-icon">
 							<i class="bi bi-play-fill text-white fs-3"></i>
 						</div>
-						<button class="btn home-btn border-danger text-white rounded-pill" type="submit">About The Event</button>
+						<button class="btn home-btn border-danger text-white rounded-pill mt-2 w-auto px-4" type="submit">About The Event</button>
 					</div>
 				</div>
 			</div>
@@ -335,14 +335,14 @@
 					<p>Event venue location info and gallery</p>
 				</div>
 				<div class="row mt-4">
-					<div class="col-sm-12 col-lg-6 p-0">
+					<div class="col-sm-12 col-lg-6 p-0 mt-1">
 						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d678.1819671459309!2d80
 						.19594636831098!3d13.032558508041898!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52
 						612ae4eb6d73%3A0x61c5fdff1ce759d!2sNesapakkam%2C%20Chennai%2C%20Tamil%20Nadu!5e1!3m2!1sen!2sin
 						!4v1687095616179!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" 
 						loading="lazy"referrerpolicy="no-referrer-when-downgrade"></iframe>
 					</div>
-					<div class="col-sm-12 col-lg-6 d-flex justify-content-center align-items-center text-white p-0">
+					<div class="col-sm-12 col-lg-6 d-flex justify-content-center align-items-center text-white p-0 mt-1">
 						<div class="p-5 venue-info">
 						<h1>Downtown Conference Center, New York</h1>
 						<p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem.
@@ -451,27 +451,27 @@
 					<p>Check our gallery from the recent events</p>
 				</div>	
 				<div class="row pb-5  justify-content-evenly">
-					<div class="col-sm-6 col-md-4 col-lg-2 p-0">
+					<div class="col-sm-6 col-md-4 col-lg-2 p-0 mt-1">
 						<div class="gallery-img">
 							<img src="./img/gallery-1.jpg">
 						</div>
 					</div>
-					<div class="col-sm-6 col-md-4 col-lg-2 p-0">
+					<div class="col-sm-6 col-md-4 col-lg-2 p-0 mt-1">
 						<div class="gallery-img">
 							<img src="./img/gallery-2.jpg">
 						</div>
 					</div>
-					<div class="col-sm-6 col-md-4 col-lg-2 p-0">
+					<div class="col-sm-6 col-md-4 col-lg-2 p-0 mt-1">
 						<div class="gallery-img">
 							<img src="./img/gallery-3.jpg">
 						</div>
 					</div>
-					<div class="col-sm-6 col-md-4 col-lg-2 p-0">
+					<div class="col-sm-6 col-md-4 col-lg-2 p-0 mt-1">
 						<div class="gallery-img">
 							<img src="./img/gallery-4.jpg">
 						</div>
 					</div>
-					<div class="col-sm-6 col-md-4 col-lg-2 p-0">
+					<div class="col-sm-6 col-md-4 col-lg-2 p-0 mt-1">
 						<div class="gallery-img">
 							<img src="./img/gallery-5.jpg">
 						</div>
